# mlsd-code-rag

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: deployment_config.yaml
docs/: ml_system_design_doc.md
notebooks/: eda.ipynb
src/: assistant.py
