[project]
name = "Code-RAG"
version = "0.1.0"
description = "ITMO 2025 ML System Design project"
requires-python = ">=3.12"
license = { text = "MIT" }
readme = "README.md"

[tool.ruff]
target-version = "py312"

select = ["E", "F", "W", "I"]
ignore = []

fixable = ["ALL"]
unfixable = []
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"